[package]
name = "Gasyori100knock"
version = "0.1.0"
authors = ["zfhrp <coricozizi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"

[[bin]]
name = "answer1"
path = "Question_01_10/answers_rust/answer_1.rs"

[[bin]]
name = "answer2"
path = "Question_01_10/answers_rust/answer_2.rs"

[[bin]]
name = "answer3"
path = "Question_01_10/answers_rust/answer_3.rs"
